# arxivtrend

./: .env.dist  .gitignore  README.md  docker-compose.yaml  pyproject.toml
arxivtrend/: args.py  arxiv_api.py  env.py  log.py  main.py
arxivtrend/apps/: __init__.py  report_usecase.py  search_usecase.py
arxivtrend/arxiv_api/: __init__.py  arxiv_api.py  taxonomy.py
arxivtrend/domain/entities/: __init__.py  arxiv_query.py  arxiv_result.py  report.py  token.py
arxivtrend/domain/report/: __init__.py  date_interpolator.py  i_report_repo.py  report_service.py
arxivtrend/domain/repos/: __init__.py  arxiv_cache_repo.py  arxiv_result_repo.py  arxiv_search_repo.py  arxiv_taxonomy_repo.py
arxivtrend/domain/search/: __init__.py  cache_status.py  i_arxiv_cache_repo.py  i_arxiv_search.py  search_service.py
arxivtrend/domain/services/: __init__.py  arxiv_service.py
arxivtrend/infra/: report_repo.py  tokenizer.py
arxivtrend/infra/arxiv_api/: __init__.py  arxiv_search.py  arxiv_taxonomy.py  taxonomies.py  taxonomy.py
arxivtrend/infra/mongo/: __init__.py  arxiv_cache.py  arxiv_cache_repo.py  arxiv_result.py  engine.py  models.py
arxivtrend/lib/: word_extract.py
docker/report/: Dockerfile  puppeteer-config.json
report/templates/: graph-paper-count.tpl  main.tpl  period-aggregate.tpl  rank-table.tpl
report/theme/: custom-theme.yml  default-with-font-fallbacks-theme.yml
stop_words/: general.txt
templates/: main.tpl  period-aggregate.tpl  rank-table.tpl
tests/infra/: test_tokenizer.py
tests/lib/: test_word_extract.py
tests/report/: test_report.py
(+9 files in other folders)
