[tool.poetry]
name = "arxivtrend"
version = "0.1.0"
description = ""
authors = ["oroshi <oroshinekko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arxiv = "^1.4.3"
pydantic = "^1.10.5"
install = "^1.3.5"
mongoengine = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
