[tool.poetry]
name = "arxivtrend"
version = "0.1.0"
description = ""
authors = ["oroshi <oroshinekko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arxiv = "^2.1.3"
pydantic = "^2.10.6"
mongoengine = "^0.29.1"
python-dotenv = "^1.0.1"
nltk = "^3.9.1"
click = "^8.1.8"
jinja2 = "^3.1.5"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
